cargada las imagenes y parrafos

--- a/index.html
+++ b/index.html
@@ -91,13 +91,19 @@
             <h3>NOVEDADES</h3>
             <div class="nove1" data-aos="fade-up"
             data-aos-anchor-placement="center-bottom">
-                <h4>Novedad 1</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente mollitia exercitationem cum deserunt placeat nihil distinctio porro magni, consequatur praesentium minima. Libero nemo nam maiores laudantium modi sunt unde ipsa.</p>
+                <div class="imgnov">
+                    <img src="http://drive.google.com/uc?export=view&id=1Fhj1i2gDxkUp8QlyfrLh7i4V9bsELnm8" alt="banner peña">
+                </div>
+                <h4>La Peña de Piriqui</h4>
+                <p>Se viene la última edición de la Peña de Piriqui el viernes 16 ¿Te la vas a perder?</p>
             </div>
             <div class="nove2" data-aos="fade-up"
             data-aos-anchor-placement="center-bottom">
-                <h4>Novedad 2</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut perspiciatis illum cupiditate illo, voluptate est aliquid ex nisi nobis sit quis laborum eaque, cumque, vitae modi rem quod eos! Ex.</p>
+                <div class="imgnov">
+                    <img src="http://drive.google.com/uc?export=view&id=1QgK8_V7VPSGeHkEie3Q72fle2F3OO9kb" alt="logo 2022">
+                </div>
+                <h4>Cierre de año 2022</h4>
+                <p>Este lunes 05 de diciembre te esperamos en la Muestra de Cierre 2022 en el Complejo Urbano Girardi</p>
             </div>
         </section>
     </main>
@@ -108,7 +114,7 @@
             <ul class="redes">
                 <li><a href="https://www.facebook.com/piriqui.perez" target="_blank"><img src="img/facebook.png" alt="facebook"></a></li>
                 <li><a href="https://www.instagram.com/balletpiriquiperez/" target="_blank"><img src="img/instagram.png" alt="instagram"></a></li>
-                <li><a href="" target="_blank"><img src="img/youtube.png" alt="youtube"></a></li>
+                <li><a href="https://www.youtube.com/@piriquiperez" target="_blank"><img src="img/youtube.png" alt="youtube"></a></li>
             </ul>
         </nav>
     </footer>
