--- a/pages/alumno.html
+++ b/pages/alumno.html
@@ -21,9 +21,11 @@
 <body class="container-fluid">
     <header class="encabezado2">
         <div class="logo">
-            <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
+            <a href="../index.html">
+                <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
+            </a>
         </div>
         <div class="textoEncabezado" data-aos="fade-down">
             <h2>1ra Escuela de Folklore</h2>
@@ -62,15 +64,17 @@
     
     <main class="alumno">
         <h3>Ser Alumno</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore corrupti adipisci, laborum autem excepturi aliquam eligendi vero magni animi saepe, quas rem id modi quidem nostrum error pariatur quae nesciunt.</p>
+        <p>La academia Piriqui Pérez cuenta con opciones para que te sumes dependiendo tu edad y conocimiento, para que no te quedes con las ganas de aprender a bailar nuestras danzas tradicionales y folkloricas.</p>
 
         <section class="niveles impar" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
             <div>
                 <h4>Jardín</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia numquam praesentium recusandae aperiam neque exercitationem in repellendus. Quidem architecto iusto quis odio ab! Quos eveniet esse, optio quia temporibus at.</p>
+                <p>Ofrecemos una opción para los más pequeños, para que con juegos aprendan conceptos básicos para bailar.
+                Este grupo está destinado para niños y niñas de 4 a 6 años.
+                </p>
             </div>
-            <img src="../img/logo_piriqui_2.jpg" alt="Imagen ilustrativa">
+            <img src="http://drive.google.com/uc?export=view&id=1DYXv0naq7_gxNn1fO45T-jTiuyJMj0_G" alt="Niños de jardín">
 
         </section>
 
@@ -78,9 +82,11 @@
         data-aos-anchor-placement="center-bottom">
             <div>
                 <h4>Escuela</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia numquam praesentium recusandae aperiam neque exercitationem in repellendus. Quidem architecto iusto quis odio ab! Quos eveniet esse, optio quia temporibus at.</p>
+                <p>Tendrás la preparación docente necesaria para estar a cargo de grupos de diferentes edades y niveles.
+                La carrera tiene un plan de 7 años con exámenes y certificación final, y está destinada para cualquier persona a partir de los 8 años.
+                </p>
             </div>
-            <img src="../img/logo_piriqui_2.jpg" alt="Imagen ilustrativa">
+            <img src="http://drive.google.com/uc?export=view&id=156a1NL_A6FdYvf6l2uxF-vx5ufJcR2bM" alt="Examen 2022">
 
         </section>
 
@@ -88,9 +94,11 @@
         data-aos-anchor-placement="center-bottom">
             <div>
                 <h4>Taller</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia numquam praesentium recusandae aperiam neque exercitationem in repellendus. Quidem architecto iusto quis odio ab! Quos eveniet esse, optio quia temporibus at.</p>
+                <p>Para aquellas personas que solo quieren aprender para bailar en peñas, reuniones familiares, etc. o que no tienen mucho tiempo para dedicarle.
+                Estos talleres se dictan en horario nocturno para que no le afecte con sus demás actividades diarias. Destinado a mayores de 16 años.
+                </p>
             </div>
-            <img src="../img/logo_piriqui_2.jpg" alt="Imagen ilustrativa">
+            <img src="http://drive.google.com/uc?export=view&id=1NIrjGxUk1zivrYSmQ3y-IoZAY8UlAB18" alt="Presentación del taller">
 
         </section>
 
@@ -98,9 +106,9 @@
         data-aos-anchor-placement="center-bottom">
             <div>
                 <h4>Ballet</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia numquam praesentium recusandae aperiam neque exercitationem in repellendus. Quidem architecto iusto quis odio ab! Quos eveniet esse, optio quia temporibus at.</p>
+                <p>Contando con 2 niveles: Juveniles (10 - 17 años) y Mayores (+ 18 años), está destinado a aquellos que ya tienen conocimientos medios o superior. El objetivo es la capacitación permanente para poder participar de festivales, encuentros y competencias.</p>
             </div>
-            <img src="../img/logo_piriqui_2.jpg" alt="Imagen ilustrativa">
+            <img src="http://drive.google.com/uc?export=view&id=15kfdY_N2OczG8hviHhN5zCHDO6ZmTqzu" alt="Ballet">
 
         </section>
         
@@ -112,7 +120,7 @@
             <ul>
                 <li><a href="https://www.facebook.com/piriqui.perez" target="_blank"><img src="../img/facebook.png" alt="facebook"></a></li>
                 <li><a href="https://www.instagram.com/balletpiriquiperez/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a></li>
-                <li><a href="" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
+                <li><a href="https://www.youtube.com/@piriquiperez" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
             </ul>
         </nav>
     </footer>
