--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,9 +21,11 @@
 <body class="container-fluid">
     <header class="encabezado2">
         <div class="logo">
-            <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
+            <a href="../index.html">
+                <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
+            </a>
         </div>
         <div class="textoEncabezado" data-aos="fade-down">
             <h2>1ra Escuela de Folklore</h2>
@@ -76,7 +78,7 @@
             </div>
             <div class="email">
                 <img src="../img/email2.png" alt="Email">
-                <span>sergiofigueroa87@gmail.com</span>
+                <span>academiapiriquiperez@gmail.com</span>
             </div>
         </div>
 
@@ -100,7 +102,7 @@
             <ul>
                 <li><a href="https://www.facebook.com/piriqui.perez" target="_blank"><img src="../img/facebook.png" alt="facebook"></a></li>
                 <li><a href="https://www.instagram.com/balletpiriquiperez/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a></li>
-                <li><a href="" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
+                <li><a href="https://www.youtube.com/@piriquiperez" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
             </ul>
         </nav>
     </footer>
