--- a/pages/historia.html
+++ b/pages/historia.html
@@ -21,9 +21,11 @@
 <body class="container-fluid">
     <header class="encabezado2">
         <div class="logo">
-            <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
+            <a href="../index.html">
+                <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
+            </a>
         </div>
         <div class="textoEncabezado" data-aos="fade-down">
             <h2>1ra Escuela de Folklore</h2>
@@ -66,17 +68,20 @@
         <section class="secUno" data-aos="fade-up"
         data-aos-anchor-placement="top-bottom">
             <div class="primera">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique sed laboriosam ipsum aut in voluptatem soluta, quis nam dolor dignissimos. Aliquam, assumenda aperiam? Tempora, iure nisi rerum quasi dolorum non. Sint corporis nam dolorum ex libero laboriosam quaerat aliquam minima recusandae esse voluptas blanditiis nemo, rerum eaque iste voluptate perspiciatis veritatis rem laudantium a. Nam autem ex eaque asperiores! Eum quae debitis illo quidem veniam error laudantium facere! Delectus, cumque rerum. Sed, et magnam quas esse dolorem explicabo sapiente consectetur aliquam mollitia quisquam nemo cupiditate itaque obcaecati! Dolores est ut perferendis velit doloribus beatae sit aliquam iure, molestiae quidem alias?</p>
+                <p>La escuela fue fundada por Oscar Alberto "Piriqui" Pérez el 3 de abril de 1963. Se llamó inicialmente "Primera Escuela de Folklore de Catamarca". Y en el año 1995, tras el fallecimiento de su fundador el año anterior, por iniciativa de algunos profesores y alumnos, se modificó el nombre a "Primera Escuela de Folklore Profesor Oscar Piriqui Pérez". Actualmente se encuentra bajo la dirección de Oscar Pérez hijo.
+                Su domicilio fue desde sus principios en la casa paterna de Piriqui, pero además se fueron abriendo filiales en varios lugares de la provincia, como Santa María, Belén, Chumbicha, Capayán, Los Altos, Andalgalá, entre otras. Posteriormente se siguieron abriendo filiales en otras provincias como Alberdi y Concepción (Tucumán), Chilecito (La Rioja) y El Portezuelo (San Juan).</p>
             </div>
-            <img src="../img/poncho_2022.jpg" alt="Imagen Ilustrativa" class="imagenUno img-fluid">
+            <img src="http://drive.google.com/uc?export=view&id=1HPcY0JAcdN8BaqXBIRNSSw_Y4Ikc8243" alt="Imagen ilustrativa - desfile" class="imagenUno img-fluid">
         </section>
 
         <section class="secDos" data-aos="fade-up"
         data-aos-anchor-placement="top-bottom">
             <div class="segunda">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus nam aspernatur, ipsa earum nisi velit voluptate beatae quasi odio excepturi quaerat dolorem ipsum consectetur sit debitis ducimus cum reiciendis nemo? Asperiores cum quo ducimus perferendis eos expedita quod nemo ratione excepturi, cupiditate quidem praesentium eum reiciendis ipsum velit quae mollitia fugit distinctio a porro, quisquam consectetur aspernatur. Maxime excepturi, quod possimus accusantium reiciendis eos. Tempore necessitatibus exercitationem itaque, libero nemo consequatur a optio ipsam quisquam, aperiam temporibus labore. Quia quod quos optio nesciunt deserunt ipsum ex, distinctio natus mollitia voluptatibus ipsam? Tenetur, rerum. Temporibus consequatur modi beatae corrupti, perferendis adipisci.</p>
+                <p>En el año 1995, el actual director se contacto con algunos ex-alumnos para sumarlos y conformar el "Ballet de Piriqui Perez", cumpliendo así con el sueño de su padre, el cual no llegó a concretar debido a su enfermedad.
+                Desde entonces el ballet a recorrido toda la provincia, y muchos lugares del país representando a Catamarca. Participando en gran cantidad de festivales, encuentros y competencias, consiguiendo el reconocimiento y admiración por pares de todas partes de la Argentina.
+                Actualmente la academia cuenta con distintas opciones para formar parte de esta gran familia.</p>
             </div>
-            <img src="../img/tele_2022.jpg" alt="Imagen Ilustrativa" class="imagenDos img-fluid">
+            <img src="http://drive.google.com/uc?export=view&id=1wmoHJO7KZ7MhGxNDEmwqlI9kOVijoC6X" alt="Imagen ilustrativa - competencia" class="imagenDos img-fluid">
         </section>
     </main>
 
@@ -86,7 +91,7 @@
             <ul>
                 <li><a href="https://www.facebook.com/piriqui.perez" target="_blank"><img src="../img/facebook.png" alt="facebook"></a></li>
                 <li><a href="https://www.instagram.com/balletpiriquiperez/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a></li>
-                <li><a href="" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
+                <li><a href="https://www.youtube.com/@piriquiperez" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
             </ul>
         </nav>
     </footer>
