--- a/pages/multimedia.html
+++ b/pages/multimedia.html
@@ -21,9 +21,11 @@
 <body class="container-fluid">
     <header class="encabezado2">
         <div class="logo">
-            <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
+            <a href="../index.html">
+                <img src="../img/logo_piriqui_1_sin_fondo.png" alt="Logo" data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
+            </a>
         </div>
         <div class="textoEncabezado" data-aos="fade-down">
             <h2>1ra Escuela de Folklore</h2>
@@ -65,14 +67,14 @@
         data-aos-anchor-placement="top-bottom">
             <h3>Fotos</h3>
             <div class="row fotos">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
-                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="../img/logo_piriqui_2.jpg" alt="Foto">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=11V6BUCsRpDaca4bYs2bbH3dXj908uZ5-" alt="Vestuario Poncho 2016">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=1RKvaPuGF4LauE7QHixcpRaT0lOg4OOnP" alt="Poncho 2016">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=1vuKgbUw__Rqpuz4rzS5zlOdk1BCLtYLj" alt="Poncho 2017">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=1m8UB_49TfO_tD4z0L0L1O5hRavfzas-g" alt="Ponchito 2017">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=17YeweW1druIKLhUXtbm8Zng-mYieZLKQ" alt="Cosquín 2018">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=18vDh6oabPfyt-D4Rr05WS0XcwNZCbCTp" alt="Cierre 2019">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=126ABGQRHUrsnY12OpePQF3wO8ZrsxOEQ" alt="Poncho 2021">
+                <img class="col-xl-3 col-md-4 col-sm-6 galeria" src="http://drive.google.com/uc?export=view&id=1yJjxy5if7MzuO9mHkq59T6xuCeJA01n4" alt="Poncho 2022">
             </div>
         </section>
 
@@ -80,9 +82,8 @@
         data-aos-anchor-placement="top-bottom">
             <h3>Videos</h3>
             <div class="videos">
-                <iframe src="https://www.youtube.com/embed/bbKL6tWI49M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/bbKL6tWI49M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/bbKL6tWI49M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/1xzl9HMhgaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/nlmg9iD-9tk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -94,7 +95,7 @@
             <ul>
                 <li><a href="https://www.facebook.com/piriqui.perez" target="_blank"><img src="../img/facebook.png" alt="facebook"></a></li>
                 <li><a href="https://www.instagram.com/balletpiriquiperez/" target="_blank"><img src="../img/instagram.png" alt="instagram"></a></li>
-                <li><a href="" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
+                <li><a href="https://www.youtube.com/@piriquiperez" target="_blank"><img src="../img/youtube.png" alt="youtube"></a></li>
             </ul>
         </nav>
     </footer>
